fixed text overlap on small screens in project section

--- a/main.css
+++ b/main.css
@@ -275,16 +275,6 @@ ul {
     box-shadow: 0px 3px 70px 0px rgba(23,30,36,0.06);
 }
 
-.work ul {
-    position: absolute;
-    bottom: 0;
-    right: 86%;
-}
-
-.work ul li {
-    margin-top: 20px;
-}
-
 /* ------- Project 02 ------- */
 .work2 {
     width: 100%;
@@ -316,16 +306,6 @@ ul {
     box-shadow: 0px 3px 70px 0px rgba(23,30,36,0.06);
 }
 
-.work2 ul {
-    position: absolute;
-    bottom: 0;
-    left: 86%;
-}
-
-.work2 ul li {
-    margin-top: 20px;
-}
-
 /* ------- Project 03 ------- */
 .work3 {
     width: 100%;
@@ -353,16 +333,6 @@ ul {
     -webkit-box-shadow: 0px 3px 70px 0px rgba(23,30,36,0.06);
     -moz-box-shadow: 0px 3px 70px 0px rgba(23,30,36,0.06);
     box-shadow: 0px 3px 70px 0px rgba(23,30,36,0.06);
-}
-
-.work3 ul {
-    position: absolute;
-    bottom: 0;
-    right: 86%;
-}
-
-.work3 ul li {
-    margin-top: 20px;
 }
 
 /* ------- All Projects ------- */
